vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_wrapped_lock_selector.vv
import v.embed_file

struct State {
	value int
}

fn main() {
	shared s := State{
		value: 1
	}
	'' == (rlock s {
		$embed_file(@FILE)
	}).path
}
